--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Байрон!",
-    "description": "Расширение для браузера Google Chrome, которое меняет заголовки статей НГС на строки из стихотворений поэтов эпохи романтизма. После установки «Байрона!» бессмертные творения Байрона, Киттса, Шелли, Лермонтова, Жуковского, Батюшкова поселяют гармонию в сердце читателя НГС.",
+    "description": "Расширение, которое меняет заголовки статей НГС на строки из стихотворений поэтов эпохи романтизма.",
     "version": "1.0.3",
 
     "permissions": [
